--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,43 +8,43 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-}
+    header { /* changed from .header to header */
+        padding: 20px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        background-color: #2a607c;
+        color: #ffffff;
+        }
 
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
+        header h1 { /* changed from .header to header */
+            display: inline-block;
+            font-size: 48px;
+        }
 
-.header h1 .seo {
-    color: #d9dcd6;
-}
+        header h1 .seo { /* changed from .header to header */
+            color: #d9dcd6;
+        }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
+        header nav { /* changed from div to nav & changed from .header to header */
+            padding-top: 15px;
+            margin-right: 20px;
+            float: right;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 20px;
+        }
 
-.header div ul {
-    list-style-type: none;
-}
+        header nav ul { /* changed from div to nav & changed from .header to header */
+            list-style-type: none;
+        }
 
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
+        header nav ul li { /* changed from div to nav & changed from .header to header */
+            display: inline-block;
+            margin-left: 25px;
+        }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
+        a {
+            color: #ffffff;
+            text-decoration: none;
+        }
 
 p {
     font-size: 16px;
@@ -143,6 +143,15 @@ p {
     color: #ffffff;
 }
 
+.search-engine-optimization img {
+    max-height: 200px;
+}
+
+.search-engine-optimization h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -150,6 +159,15 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+}
+
+.online-reputation-management img {
+    max-height: 200px;
+}
+
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .social-media-marketing {
@@ -161,26 +179,8 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
 .social-media-marketing img {
     max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .social-media-marketing h2 {
