--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-    header { /* changed from .header to header */
+    header { /* changed from .header to header */ /*organized into header section */
         padding: 20px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         background-color: #2a607c;
@@ -75,7 +75,7 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
+.benefits { /*organized into benefits section */
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,55 +86,55 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+    .benefit-lead {
+        margin-bottom: 32px;
+        color: #ffffff;
+    }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+    .benefit-lead h3 {
+        margin-bottom: 10px;
+        text-align: center;
+    }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+    .benefit-lead img {
+        display: block;
+        margin: 10px auto;
+        max-width: 150px;
+    }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+    .benefit-brand {
+        margin-bottom: 32px;
+        color: #ffffff;
+    }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+    .benefit-brand h3 {
+        margin-bottom: 10px;
+        text-align: center;
+    }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+    .benefit-brand img {
+        display: block;
+        margin: 10px auto;
+        max-width: 150px;
+    }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+    .benefit-cost {
+        margin-bottom: 32px;
+        color: #ffffff;
+    }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+    .benefit-cost h3 {
+        margin-bottom: 10px;
+        text-align: center;
+    }
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+    .benefit-cost img {
+        display: block;
+        margin: 10px auto;
+        max-width: 150px;
+    }
 
-.search-engine-optimization {
+.search-engine-optimization { /*organized into search engine optimization section */
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,34 +143,16 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
+    .search-engine-optimization img {
+        max-height: 200px;
+    }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+    .search-engine-optimization h2 {
+        margin-bottom: 20px;
+        font-size: 36px;
+    }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing {
+.online-reputation-management { /*organized into online reputation management section */
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -179,22 +161,40 @@ p {
     color: #ffffff;
 }
 
-.social-media-marketing img {
-    max-height: 200px;
-}
+    .online-reputation-management img {
+        max-height: 200px;
+    }
 
-.social-media-marketing h2 {
+    .online-reputation-management h2 {
+        margin-bottom: 20px;
+        font-size: 36px;
+    }
+
+.social-media-marketing { /*organized into social media marketing section */
     margin-bottom: 20px;
-    font-size: 36px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
-.footer {
+    .social-media-marketing img {
+        max-height: 200px;
+    }
+
+    .social-media-marketing h2 {
+        margin-bottom: 20px;
+        font-size: 36px;
+    }
+
+footer { /* changed from .footer to footer to match html */ /*organized into footer section */
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
-    font-size: 20px;
-}
+    footer h2 { /* changed from .footer to footer to match html */
+        font-size: 20px;
+    }
